jan19/parser.output
Terminals unused in grammar

    right_shift
    list_id
    rel_op


Grammar

    0 $accept: nizNaredbi $end

    1 nizNaredbi: nizNaredbi naredba '\n'
    2           | naredba '\n'

    3 naredba: int_token id_token '=' izraz ';'
    4        | broj
    5        | print_token '(' izraz ',' broj ')' ';'
    6        | int_token id_token ';'
    7        | id_token '=' izraz ';'

    8 izraz: broj
    9      | izraz '+' izraz
   10      | izraz '-' izraz
   11      | izraz '*' izraz
   12      | izraz '/' izraz
   13      | id_token
   14      | izraz left_shift izraz
   15      | '(' izraz ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '(' (40) 5 15
    ')' (41) 5 15
    '*' (42) 11
    '+' (43) 9
    ',' (44) 5
    '-' (45) 10
    '/' (47) 12
    ';' (59) 3 5 6 7
    '=' (61) 3 7
    error (256)
    left_shift (258) 14
    right_shift (259)
    broj <d> (260) 4 5 8
    id_token <s> (261) 3 6 7 13
    list_id <s> (262)
    rel_op (263)
    print_token (264) 5
    int_token (265) 3 6


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    nizNaredbi (22)
        on left: 1 2
        on right: 0 1
    naredba (23)
        on left: 3 4 5 6 7
        on right: 1 2
    izraz <d> (24)
        on left: 8 9 10 11 12 13 14 15
        on right: 3 5 7 9 10 11 12 14 15


State 0

    0 $accept: . nizNaredbi $end

    broj         shift, and go to state 1
    id_token     shift, and go to state 2
    print_token  shift, and go to state 3
    int_token    shift, and go to state 4

    nizNaredbi  go to state 5
    naredba     go to state 6


State 1

    4 naredba: broj .

    $default  reduce using rule 4 (naredba)


State 2

    7 naredba: id_token . '=' izraz ';'

    '='  shift, and go to state 7


State 3

    5 naredba: print_token . '(' izraz ',' broj ')' ';'

    '('  shift, and go to state 8


State 4

    3 naredba: int_token . id_token '=' izraz ';'
    6        | int_token . id_token ';'

    id_token  shift, and go to state 9


State 5

    0 $accept: nizNaredbi . $end
    1 nizNaredbi: nizNaredbi . naredba '\n'

    $end         shift, and go to state 10
    broj         shift, and go to state 1
    id_token     shift, and go to state 2
    print_token  shift, and go to state 3
    int_token    shift, and go to state 4

    naredba  go to state 11


State 6

    2 nizNaredbi: naredba . '\n'

    '\n'  shift, and go to state 12


State 7

    7 naredba: id_token '=' . izraz ';'

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 16


State 8

    5 naredba: print_token '(' . izraz ',' broj ')' ';'

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 17


State 9

    3 naredba: int_token id_token . '=' izraz ';'
    6        | int_token id_token . ';'

    '='  shift, and go to state 18
    ';'  shift, and go to state 19


State 10

    0 $accept: nizNaredbi $end .

    $default  accept


State 11

    1 nizNaredbi: nizNaredbi naredba . '\n'

    '\n'  shift, and go to state 20


State 12

    2 nizNaredbi: naredba '\n' .

    $default  reduce using rule 2 (nizNaredbi)


State 13

    8 izraz: broj .

    $default  reduce using rule 8 (izraz)


State 14

   13 izraz: id_token .

    $default  reduce using rule 13 (izraz)


State 15

   15 izraz: '(' . izraz ')'

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 21


State 16

    7 naredba: id_token '=' izraz . ';'
    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz

    '+'         shift, and go to state 22
    '-'         shift, and go to state 23
    '*'         shift, and go to state 24
    '/'         shift, and go to state 25
    left_shift  shift, and go to state 26
    ';'         shift, and go to state 27


State 17

    5 naredba: print_token '(' izraz . ',' broj ')' ';'
    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz

    '+'         shift, and go to state 22
    '-'         shift, and go to state 23
    '*'         shift, and go to state 24
    '/'         shift, and go to state 25
    left_shift  shift, and go to state 26
    ','         shift, and go to state 28


State 18

    3 naredba: int_token id_token '=' . izraz ';'

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 29


State 19

    6 naredba: int_token id_token ';' .

    $default  reduce using rule 6 (naredba)


State 20

    1 nizNaredbi: nizNaredbi naredba '\n' .

    $default  reduce using rule 1 (nizNaredbi)


State 21

    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz
   15      | '(' izraz . ')'

    '+'         shift, and go to state 22
    '-'         shift, and go to state 23
    '*'         shift, and go to state 24
    '/'         shift, and go to state 25
    left_shift  shift, and go to state 26
    ')'         shift, and go to state 30


State 22

    9 izraz: izraz '+' . izraz

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 31


State 23

   10 izraz: izraz '-' . izraz

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 32


State 24

   11 izraz: izraz '*' . izraz

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 33


State 25

   12 izraz: izraz '/' . izraz

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 34


State 26

   14 izraz: izraz left_shift . izraz

    broj      shift, and go to state 13
    id_token  shift, and go to state 14
    '('       shift, and go to state 15

    izraz  go to state 35


State 27

    7 naredba: id_token '=' izraz ';' .

    $default  reduce using rule 7 (naredba)


State 28

    5 naredba: print_token '(' izraz ',' . broj ')' ';'

    broj  shift, and go to state 36


State 29

    3 naredba: int_token id_token '=' izraz . ';'
    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz

    '+'         shift, and go to state 22
    '-'         shift, and go to state 23
    '*'         shift, and go to state 24
    '/'         shift, and go to state 25
    left_shift  shift, and go to state 26
    ';'         shift, and go to state 37


State 30

   15 izraz: '(' izraz ')' .

    $default  reduce using rule 15 (izraz)


State 31

    9 izraz: izraz . '+' izraz
    9      | izraz '+' izraz .
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz

    '*'         shift, and go to state 24
    '/'         shift, and go to state 25
    left_shift  shift, and go to state 26

    $default  reduce using rule 9 (izraz)


State 32

    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   10      | izraz '-' izraz .
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz

    '*'         shift, and go to state 24
    '/'         shift, and go to state 25
    left_shift  shift, and go to state 26

    $default  reduce using rule 10 (izraz)


State 33

    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   11      | izraz '*' izraz .
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz

    left_shift  shift, and go to state 26

    $default  reduce using rule 11 (izraz)


State 34

    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   12      | izraz '/' izraz .
   14      | izraz . left_shift izraz

    left_shift  shift, and go to state 26

    $default  reduce using rule 12 (izraz)


State 35

    9 izraz: izraz . '+' izraz
   10      | izraz . '-' izraz
   11      | izraz . '*' izraz
   12      | izraz . '/' izraz
   14      | izraz . left_shift izraz
   14      | izraz left_shift izraz .

    $default  reduce using rule 14 (izraz)


State 36

    5 naredba: print_token '(' izraz ',' broj . ')' ';'

    ')'  shift, and go to state 38


State 37

    3 naredba: int_token id_token '=' izraz ';' .

    $default  reduce using rule 3 (naredba)


State 38

    5 naredba: print_token '(' izraz ',' broj ')' . ';'

    ';'  shift, and go to state 39


State 39

    5 naredba: print_token '(' izraz ',' broj ')' ';' .

    $default  reduce using rule 5 (naredba)
